# gnome-inm-forecast

./: AUTHORS  COPYING  ChangeLog  GNOME_INM_menu.xml  GNOME_inm-forecast.server  GNOME_inm-forecast.server_rpm  INSTALL  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  bootstrap  config.h  config.h.in  configure  configure.in  gnome-inm-forecast.1  gnome-inm-forecast.lsm  gnome-inm-forecast.lsm.in  gnome-inm-forecast.spec  gnome-inm-forecast.spec.in  gnome-inm-glade.glade  gnome_inm-opt.c  gnome_inm-opt.def  gnome_inm-opt.h  gnome_inm.c  gnome_inm.schemas  local_codes.txt  stations_list_es.txt  system.h  updater  xmalloc.c
debian/: README.Debian  changelog  control  copyright  cron.d.ex  dirs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  gnome-inm-forecast-default.ex  gnome-inm-forecast.doc-base.EX  gnome-inm-forecast.install  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex
m4/: ChangeLog  Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  Makefile.in  Makevars  POTFILES  POTFILES.in  ca.po  es.po  eu.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  config.h  config.h.in  connection.c  connection.h  gconf_callbacks.c  gconf_callbacks.h  gui.c  gui.h  html_parser.c  html_parser.h  main.c  main.h  preferences.c  preferences.h
