dnl Process this file with autoconf to produce a configure script.

dnl AC_INIT(src/main.c)
AC_INIT(gnome-inm-forecast,0.5.0,[ga@kutxa.homeunix.org])
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(gnome-inm-forecast, 0.5.0)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(src/config.h)

dnl *************************************************
dnl gettext support
dnl *************************************************

GETTEXT_PACKAGE=gnome-inm-forecast
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
AC_SUBST([CONFIG_STATUS_DEPENDENCIES],['$(top_srcdir)/po/LINGUAS'])
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Define to the Gettext package name])
ALL_LINGUAS="`cat "$srcdir/po/LINGUAS" | grep -v '^#'`"

AM_GLIB_GNU_GETTEXT
AC_PROG_INTLTOOL

AC_DEFINE([PACKAGE_LOCALE_DIR],[${ac_default_prefix}/${DATADIRNAME}/locale],[Description])
dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
fi

AH_TEMPLATE([PACKAGE_DIR],[])
AC_DEFINE([PACKAGE_DIR],["/usr/share/gnome-inm-forecast/"])

AH_TEMPLATE([PIXMAPS_DIR],[])
AC_DEFINE([PIXMAPS_DIR],["/usr/share/gnome-inm-forecast/pixmaps/"])

AM_GCONF_SOURCE_2
AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
if test x"$GCONFTOOL" = xno; then
	AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
fi

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.
PKG_CHECK_MODULES(GTK,[gtk+-2.0 >= 2.8])
dnl PKG_CHECK_MODULES(LIBXML,[libxml-2.0 >= 2.6])
PKG_CHECK_MODULES(LIBPANELAPPLET,[libpanelapplet-2.0 >= 2.6])
PKG_CHECK_MODULES(LIBGLADE,[libglade-2.0 >= 2.6])
dnl PKG_CHECK_MODULES(LIBGCONF,[gconf >= 1.0])
PKG_CHECK_MODULES(LIBGVFS,[gnome-vfs-2.0 >= 0.21])

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

AC_HEADER_MAJOR
dnl AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
dnl AC_CHECK_FUNCS(mkfifo)
dnl AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile gnome-inm-forecast.lsm gnome-inm-forecast.spec src/Makefile po/Makefile.in)
